 * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 * Removed deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 * Deprecated LinearModel, LinearModelFactory
 * Moved HypothesisTest::(Partial|Full)Regression to LinearModelTest
 * Deprecated OptimizationProblem(levelFunction, levelValue)

=== Python module ===

=== Miscellaneous ===
 * Changed bugtracker to GitHub issues (https://github.com/openturns/openturns/issues)
 * Dropped rot dependency

=== Bug fixes ===
 * #289 (Move the LinearModelFactory class from the Base namespace to the Uncertainty namespace)
 * #579 (There is no example of a typical "Central Tendency" study)
 * #839 (more optim solvers details)
 * #931 (The PostAnalyticalImportanceSampling and PostAnalyticalControlledImportanceSampling are too briefly documented)
 * #979 (Viewer does not handle BarPlot's fillStyle)
 * #977 (HypothesisTest::ChiSquared is bogus)
 * #980 (CorrelationAnalysis_SRC scales the coefficients so that they sum to 1)
 * #981 (HypothesisTest_{Full, Partial} regression should be moved to LinearModelTest)
 * #982 (LinearModelTest::LinearModelDurbinWatson with several factors)
 * #983 (Bogus Normal parameter distribution)
 * #989 (Fixed the documentation of BIC according to the code)
 * #995 (Pip does not recognize conda install of openturns)
 * #1000 (SaltelliSensitivityAlgorithm with LowDiscrepancyExperiment produces wrong results)
 * #1005 (The stopping criteria of SobolSimulationAlgorithm is weird)
 * #1024 (The unary operator is undefined for Normal distribution)
 * #1025 (Empty throw in PythonWrappingFunctions)
 * #1028 (Build fails with clang-60: token is not a valid binary operator in a preprocessor subexpression)
 * #1045 (LowDiscrepancyExperiment/ComposedCopula correlation across blocks ?)

== 1.12 release (2018-11-08) == #release-1.12

=== Library ===

==== Major changes ====
 * FieldFunction and co knows its input/output meshes before evaluation