@@ -107,9 +107,15 @@ Function QuadraticTaylor::getInputFunction() const
   return inputFunction_;
 }
 
-/* Response surface accessor */
+/* Metamodel accessor */
+Function QuadraticTaylor::getMetaModel() const
+{
+  return responseSurface_;
+}
+
 Function QuadraticTaylor::getResponseSurface() const
 {
+  LOGWARN(OSS() << "getResponseSurface is deprecated, use getMetaModel");
   return responseSurface_;
 }
 
