@@ -76,7 +76,10 @@ public:
   /** Input function accessor */
   Function getInputFunction() const;
 
-  /** Response surface accessor */
+  /** Metamodel accessor */
+  Function getMetaModel() const;
+
+  /** @deprecated Response surface accessor */
   Function getResponseSurface() const;
 
 protected:
