@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# get the metamodel\n",
-    "responseSurface = algo.getResponseSurface()"
+    "responseSurface = algo.getMetaModel()"
    ]
   },
   {
