@@ -55,7 +55,7 @@
     "# create a linear (first order) Taylor approximation\n",
     "algo = ot.LinearTaylor(x0, model)\n",
     "algo.run()\n",
-    "responseSurface = algo.getResponseSurface()"
+    "responseSurface = algo.getMetaModel()"
    ]
   },
   {
@@ -1192,7 +1192,7 @@
     "# create a quadratic (2nd order) Taylor approximation\n",
     "algo = ot.QuadraticTaylor(x0, model)\n",
     "algo.run()\n",
-    "responseSurface = algo.getResponseSurface()"
+    "responseSurface = algo.getMetaModel()"
    ]
   },
   {
