@@ -56,7 +56,7 @@ the variable :math:`X^i` has on the dispersion of :math:`Y^j`.
     # Linear model
     algo = ot.LinearLeastSquares(x, y)
     algo.run()
-    linear = algo.getResponseSurface()
+    linear = algo.getMetaModel()
 
     graph = ot.Graph('Null Pearson coefficient', 'u', 'v', True, '')
     cloud1 = ot.Cloud(x1, y1)
